# cartesian_planner

./: .gitignore  0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
src/pct/: CMakeLists.txt  package.xml
src/pct/config/: ati.yaml  bath_tub.yaml  boeing.yaml  cam_sander_0.yaml  cam_sander_90.yaml  debug_pc.yaml  fender.yaml  ferro_sander.yaml  gear_ext.yaml  gear_int.yaml  planner.yaml  step_slab.yaml  tools.yaml  wld_gun.yaml
src/pct/data/ARM_CAD_files/: Core Flat Patterns.dxf  HUMAN-ROBOT_CORE_LOCATION.dxf  LM-TS-ARM-001-501_001_final.SLDPRT  LM-TS-ARM-001-501_001_final.stp  LM_TS_ARM_001_501_001_final.prt  Overcore Plies_Ply.4_NR970V563X _ CARBON FIBER REINFORCED EPOXY SHEET PER BMS 8-256 TYPE IV CLASS 2 STYLE 3K-70-PW __0.dxf  Overcore Plies_Ply.5_NR970V563X _ CARBON FIBER REINFORCED EPOXY SHEET PER BMS 8-256 TYPE IV CLASS 2 STYLE 3K-70-PW __0.dxf  Overcore Plies_Ply.6_NR970V563X _ CARBON FIBER REINFORCED EPOXY SHEET PER BMS 8-256 TYPE IV CLASS 2 STYLE 3K-70-PW __0.dxf  Undercore Plies_Ply.1_NR970V563X _ CARBON FIBER REINFORCED EPOXY SHEET PER BMS 8-256 TYPE IV CLASS 2 STYLE 3K-70-PW __0.dxf  Undercore Plies_Ply.2_NR970V563X _ CARBON FIBER REINFORCED EPOXY SHEET PER BMS 8-256 TYPE IV CLASS 2 STYLE 3K-70-PW __0.dxf  Undercore Plies_Ply.3_NR970V563X _ CARBON FIBER REINFORCED EPOXY SHEET PER BMS 8-256 TYPE IV CLASS 2 STYLE 3K-70-PW __0.dxf
src/pct/data/Gear/: Gear External Test Edge Chamfering.csv  Gear External.part  Gear Internal Inner Demo Deburring.csv  Gear Internal Inner Demo Edge Chamfering.csv  Gear Internal Inner Demo Root Chamfering.csv  Gear Internal Inner Test Deburring.csv  Gear Internal Inner Test Edge Chamfering.csv  Gear Internal Inner Test Root Chamfering.csv  Gear Internal Inner.part  Gear Internal Outer Demo Deburring.csv  Gear Internal Outer Demo Edge Chamfering.csv  Gear Internal Outer.part
src/pct/data/csv/: 0.csv  1.csv  16.csv  18.csv  1_106_60000_37.csv  2.csv  22.csv  23.csv  3.csv  4.csv  5.csv  bath_tub_task1.csv  bath_tub_task2.csv  bath_tub_task3.csv  bath_tub_task4.csv  closest_configs.csv  config.csv  connectivity.csv  cost_vec.csv  cost_vecs.csv  data.csv  data1.csv  debug_configs.csv  debug_pc.csv  delete_me.m  delete_me.m~  delete_me2.m~  delete_me3.m  delete_me3.m~  fender.csv  fender_path1.csv  fender_states.csv  gear_ext_deburring.csv  gear_int.csv  graph_stats.csv  greedy.csv  joint_states.csv  joint_states3.csv  joint_states5.csv  joint_states6.csv  (+22 more)
src/pct/data/csv/ak_scan_paths/: joint_states2.csv  joint_states4.csv  scan_path.csv  scan_path6.csv
src/pct/data/csv/backup/: 3.csv  joint_states.csv
src/pct/data/decision_variable/: pitr_nobias_opt_x.csv  random_nobias_opt_x.csv
src/pct/data/maps/: map_all.stl  map_belts.stl  map_bucket.stl  map_case_2_hole.stl  map_case_3_hole.stl  map_chair.stl  map_check.stl  map_cluttered_1.stl  map_cluttered_2.stl  map_cluttered_3.stl  map_cluttered_4.stl  map_cluttered_5.stl  map_cluttered_6.stl  map_curved_plate.stl  map_cylinder_slots.stl  map_debug_subspace.stl  map_demo_day.stl  map_diverse.stl  map_hook.stl  map_maze.stl  map_mold.stl  map_mold_transfer.stl  map_multi.stl  map_multi2.stl  map_narrow_slits.stl  map_narrow_slits_2.stl  map_pillars.stl  map_pipes.stl  map_playground_1.stl  map_rods.stl  map_shelf.stl  map_shortcut.stl  map_shortcut_2.stl  map_shortcut_2_blocked.stl  map_shortcut_2_restricted.stl  map_shortcut_only.stl  map_simple.stl  map_slots.stl  map_table.stl  map_test.stl  (+3 more)
src/pct/data/meshes/: Heli_Blade_bin.stl  bath_tub.stl  boeing_mold.STEP  boeing_mold.stl  cam_sander_0.stl  cam_sander_90.stl  cube.stl  fender_binScaled.stl  ferro_sander.stl  ferro_sander_coll.stl  floor.stl  gear_ext.stl  kane_aok_min visual.stl  orbital_sander.stl  sander_v1.stl  step_slab.stl  wld_gun.stl
src/pct/data/slworks/: aok_905_lmax_redu.SLDPRT  bath_tub.SLDPRT  bath_tub.STEP  sander_v1.SLDPRT  sander_v1_coll.SLDPRT  slab.SLDPRT  step_slab.STEP  ~$slab.SLDPRT
src/pct/data/slworks/sanding tool/: Sander_holder_v6.SLDPRT  Sanding_assem6.SLDASM  cam_sander.SLDASM  cam_sander.SLDPRT
src/pct/data/slworks/tomcat/: tomcat chassis v5_AllCATPart.STEP
src/pct/data/slworks/welding gun/: Welding_assem2.SLDASM  Welding_assem2.step.STEP  Welding_gun.SLDPRT  Welding_holder.SLDPRT  wld_gun.SLDPRT
src/pct/data/test_case_specific_data/: analyze_jac_map.m  analyze_src_map.m  analyze_src_map.m~  bck_src_map.csv  cost_histories.csv  delete_me.m  delete_me.m~  delete_me2.m  figures.m  fwd_src_map.csv  jac_mapping.csv  node_histories.csv  src_histories.csv  src_map.csv
src/pct/data/test_case_specific_data/bath_tub/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  bath_tub_cost_vec.csv  bath_tub_cost_vecs.csv  bathtub_validity_ratios.csv  bck_src_map.csv  closest_configs.csv  fwd_src_map.csv  gb_cost_histories.csv  gb_node_histories.csv  gb_src_histories.csv  gr_cost_histories.csv  (+16 more)
src/pct/data/tools/: ati.xacro  cam_sander_0.xacro  cam_sander_90.xacro  ferro_sander.xacro  gp8_tool.xacro  kane.xacro  roller.xacro  sander.xacro  wld_gun.xacro
src/pct/data/urdf/: abb_irb_4600.urdf
src/pct/include/pct/: ActionModule.hpp  IncreasePathResolution.hpp  JacDrivenPCCheck.hpp  PCTplanner.hpp  SaveGraphStats.hpp  ShortestDistanceCheck.hpp  build_graph.hpp  cholesky_decomposition.hpp  genTolWp.hpp  genTraj_from_ids.hpp  gen_cvrg_plan.hpp  gen_nodes.hpp  gen_wdg.hpp  geometric_filter.h  graph_description.hpp  graph_searches.hpp  jacQP.hpp  jacQP_cgal.hpp  jacQP_gurobi.hpp  node_description.hpp  numIK.hpp  path_consistency.hpp  path_consistency_convergence.hpp  sample_nodes.hpp  ss_searches.hpp  timer.hpp  traj_err.hpp
src/pct/launch/: EvalObj.launch  bootstrap.launch  planner.launch  planner_viz.launch
src/pct/matlab/: TCP.m  curve_fit.m  curve_fit.m~  delete_me.m  delete_me2.m  delete_me4.m  delete_me4.m~  point_selec.m  point_selec.m~  tf_check.m  tf_check.m~
src/pct/src/: ObjFunc.cpp  ParameterEstimation.cpp  analysis.cpp  env_part_coll.cpp  main.cpp  numIK.cpp  path_T_traj.cpp  test_coll.cpp  test_qp.cpp  verify_ik_success.cpp  x_evaluator.cpp
(+1813 files in other folders)
